# http-server/models/device-info.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"time"
+)
+
+type DeviceInfo struct {
+	Id     string     `json:"id"`
+	BornAt time.Time  `json:"born_at"`
+	DeadAt *time.Time `json:"dead_at,omitempty"`
+	Reason *string    `json:"reason,omitempty"`
+}
