# http-server/models/index.go
@@ -1,10 +1,5 @@
 package models
 
-import (
-	"github.com/google/uuid"
-	"time"
-)
-
 type ResponseList struct {
 	Code int         `json:"code"`
 	Msg  string      `json:"msg"`
@@ -17,26 +12,22 @@ type Resp[T any] struct {
 	Data T      `json:"data"`
 }
 
-type Token struct {
-	Token string `json:"token"`
-}
-type RegisterList struct {
-	Username string `json:"username"`
-	Passwd   string `json:"passwd"`
-}
-
-type Uuid struct {
-	Uuid uuid.UUID `json:"uuid"`
-}
-type Info struct {
-	Id     string     `json:"id"`
-	BornAt time.Time  `json:"born_at"`
-	DeadAt *time.Time `json:"dead_at,omitempty"`
-	Reason *string    `json:"reason,omitempty"`
+func NewResp[T any](code int, msg string, data T) Resp[T] {
+	return Resp[T]{
+		Code: code,
+		Msg:  msg,
+		Data: data,
+	}
 }
 
-type KeepalivePackage struct {
-	Id    string `json:"id"`
-	Value string `json:"value"`
-	Time  string `json:"time"`
+type Msg struct {
+	Code int    `json:"code"`
+	Msg  string `json:"msg"`
+}
+
+func MsgOnly(code int, msg string) Msg {
+	return Msg{
+		Code: code,
+		Msg:  msg,
+	}
 }
